# atcoder-rust

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/commands/: error.rs  init.rs  mod.rs  new.rs  open.rs  submit.rs  test.rs
templates/: Cargo.toml  rustfmt.toml  template.rs
