[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
reqwest = "0.13.2"
scraper = "0.25.0"
serde_json = "1.0.149"
toml = "1.0.6"

[dependencies.serde]
features = ["derive"]
version = "1.0.228"

[dependencies.tokio]
features = ["full"]
version = "1.50.0"

[package]
edition = "2024"
name = "atcoder-rust"
version = "0.1.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 0 }

cast_possible_truncation = { level = "allow", priority = 1 }
needless_return = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = "symbols"
