[package]
name = "atcoder-rust"
edition = "2024"
version = "0.1.0"
description = "A Rust CLI tool for AtCoder."
authors = ["kuma"]
license = "MIT"
repository = "https://github.com/Kumasan00/atcoder-rust"


[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.0", features = ["derive"] }
open = "5.3.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.0.7"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 0 }
# cargo = { level = "warn", priority = 0 }

cast_possible_truncation = { level = "allow", priority = 1 }
needless_return = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = "symbols"
